Add README file

--- a/CryptoCurrencies/View/MainWindow.xaml
+++ b/CryptoCurrencies/View/MainWindow.xaml
@@ -8,8 +8,9 @@
         xmlns:userControls="clr-namespace:View"
         xmlns:vm="clr-namespace:ViewModel;assembly=CurrenciesViewModel"
         xmlns:user="clr-namespace:View.UserControls"
+        xmlns:viewmodel="clr-namespace:ViewModel;assembly=ViewModel"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance Type=vm:CurrencyViewModel}"
+        d:DataContext="{d:DesignInstance Type=viewmodel:CurrencyViewModel}"
         ResizeMode="CanMinimize"
         Title="CryptoCurrency"
         Height="450"
